--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
 
 <body>
     <header class="Header-index">
+
+
         <h1>GamingHouse</h1>
+
+        <ul>
+
+
+            <li>Categorías</li>
+            <li>Armá tu pc</li>
+            <li>Nuestra empresa</li>
+            <li>Contacto</li>
+        </ul>
+
+
     </header>
 
 </body>
