--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
 
 
 <body>
-    <header class="Header-index">
+    <header class="header-index">
 
 
-        <h1>GamingHouse</h1>
+        <h1 class="header__tittle">GamingHouse</h1>
 
-        <ul>
+        <nav class="header-nav">
+
+            <ul class="header-nav-ul">
 
 
-            <li>Categorías</li>
-            <li>Armá tu pc</li>
-            <li>Nuestra empresa</li>
-            <li>Contacto</li>
-        </ul>
+                <li class="nav-ul-li">Categorías</li>
+                <li class="nav-ul-li">Armá tu pc</li>
+                <li class="nav-ul-li">Nuestra empresa</li>
+                <li class="nav-ul-li">Contacto</li>
+            </ul>
+
+        </nav>
 
 
     </header>
