--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>GamingHouse</title>
 </head>
 
@@ -12,19 +13,24 @@
 <body>
     <header class="header-index">
 
+        <div>
 
-        <h1 class="header__tittle">GamingHouse</h1>
+
+            <h1 class="header__tittle">GamingHouse</h1>
+
+        </div>
 
         <nav class="header-nav">
 
-            <ul class="header-nav-ul">
-
-
-                <li class="nav-ul-li">Categorías</li>
-                <li class="nav-ul-li">Armá tu pc</li>
-                <li class="nav-ul-li">Nuestra empresa</li>
-                <li class="nav-ul-li">Contacto</li>
+           
+            <ul>
+                <li>Categorías</li>
+                <li>Armá tu pc</li>
+                <li>Nuestra empresa</li>
+                <li>Contacto</li>
             </ul>
+
+            
 
         </nav>
 
