--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>GamingHouse</title>
 </head>
 
 
 <body>
+
+         <!-- Comienzo del header -->
+
     <header class="header-index">
 
         <div>
@@ -36,6 +40,46 @@
 
 
     </header>
+
+         <!-- Fin del header -->
+
+         <!-- Comienzo del main-->
+
+    <main class="main-index">
+
+
+
+
+    </main>
+
+         <!-- Fin del main-->
+
+         <!-- Comienzo del footer-->
+    <footer>
+
+        <section>
+            <p>Nos encontramos en:</p>
+
+            <iframe class="iframe-map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d821.4349166206297!2d-58.47201727080951!3d-34.56014629433775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb686f64623a9%3A0x257f2cde788f4d3a!2sAv.%20Congreso%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1662623882361!5m2!1ses-419!2sar"
+                 style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+
+            </iframe>
+
+
+        </section>
+
+
+    </footer>
+
+         <!-- Fin del footer-->
+
+
+
+
+
+
 
 </body>
 
