--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+
     <title>GamingHouse</title>
+
 </head>
 
 
@@ -15,7 +17,7 @@
 
     <!-- Comienzo del header -->
 
-    <header class="header-index">
+    <header class="header-index pb-1">
 
         <div>
 
@@ -45,10 +47,61 @@
 
     <!-- Comienzo del main-->
 
-    <main class="main-index">
+    <main class="container shadow-lg p-3 mb-5 bg-body rounded align-center">
 
 
 
+        <div>
+            <h2 class="text-center">Ofertas</h2>
+        </div>
+
+        <div class="row col-12">
+
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="./assets/rtx3060ti.png" class="d-block w-50 rounded mx-auto" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="">rtx3060ti</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="./assets/rtx3060ti.png" class="d-block w-50 rounded mx-auto" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/rtx3060ti.png" class="d-block w-50 rounded mx-auto" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+        </div>
 
     </main>
 
@@ -76,12 +129,12 @@
             <i class="bi-facebook"></i>
             <i class="bi-instagram"></i>
             <i class="bi-github"></i>
-        
+
         </section>
 
         <section class="derechos">
 
-            <p>GaminHouse,2022.Todos los derechos reservados.</p>
+            <p>@GamingHouse,2022.Todos los derechos reservados.</p>
 
 
 
@@ -97,6 +150,9 @@
 
 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+        crossorigin="anonymous"></script>
 
 </body>
 
