--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    
 
     <title>GamingHouse</title>
 
@@ -127,16 +132,18 @@
             <p>Seguinos en nuestras redes:</p>
 
             <i class="bi-facebook"></i>
-            <i class="bi-instagram"></i>
-            <i class="bi-github"></i>
+
+            <i class="bi-facebook"></i>
+
+            <i class="bi-facebook"></i>
+
+            
 
         </section>
 
         <section class="derechos">
 
             <p>@GamingHouse,2022.Todos los derechos reservados.</p>
-
-
 
         </section>
 
