--- a/index.html
+++ b/index.html
@@ -142,16 +142,13 @@
 
             <p>Seguinos en nuestras redes:</p>
 
-            <div class="py-1">
-                <i class="bi-facebook links"></i>
-            </div>
-            <div class="py-1">
-                <i class="bi-instagram links"></i>
-            </div>
-            <div class="py-1">
-                <i class="bi-github links"></i>
-            </div>
 
+            <ul>
+                <li class="py-2"><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li></a>
+                <li class="py-2"><a href="" class="links"><i class="bi-instagram"></i></li></a>
+                <li class="py-2"><a href="" class="links"><i class="bi-github"></i></li></a>
+
+            </ul>
 
 
         </section>
