se agrego formulario

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
 
 
             <ul>
-                <a href="./index.html" class="links">
+                <a href="./categorias.html" class="links">
                     <li>Categorías</li>
                 </a>
-                <a href="./index.html" class="links">
+                <a href="./armatupc.html" class="links">
                     <li>Armá tu pc</li>
                 </a>
-                <a href="./index.html" class="links">
+                <a href="./nuestraempresa.html" class="links">
                     <li>Nuestra empresa</li>
                 </a>
-                <a href="./index.html" class="links">
+                <a href="./contacto.html" class="links">
                     <li>Contacto</li>
                 </a>
             </ul>
