--- a/nuestraempresa.html
+++ b/nuestraempresa.html
@@ -10,10 +10,112 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    
+
     <title>Nuestra empresa</title>
 </head>
+
 <body>
+     <!-- Comienzo del header -->
+
+     <header class="header-index pb-1">
+
+        <div>
+
+
+            <a href="./index.html" class="links">
+                <h1 class="header__tittle links">GamingHouse</h1>
+            </a>
+
+        </div>
+
+        <nav class="header-nav">
+
+
+            <ul>
+                <a href="./categorias.html" class="links">
+                    <li>Categorías</li>
+                </a>
+                <a href="./armatupc.html" class="links">
+                    <li>Armá tu pc</li>
+                </a>
+                <a href="./nuestraempresa.html" class="links">
+                    <li>Nuestra empresa</li>
+                </a>
+                <a href="./contacto.html" class="links">
+                    <li>Contacto</li>
+                </a>
+            </ul>
+
+
+
+        </nav>
+
+
+    </header>
+
+    <!-- Fin del header -->
+
+     <!-- Inicio contenido -->
+
+     <Main class="main-nuestraempresa container">
+
+
+        <section>
+
+            <h5 class="fs-1 py-3">Quienes somos?</h5>
+
+            <p class="py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. A atque voluptas officiis dolores, dolore fuga quia magni est aut dolorem maxime officia at aperiam quos nam quaerat iusto neque dolor.</p>
     
+      </section>
+
+
+
+    </Main>
+
+    <!-- Final contenido -->
+
+    <!-- Comienzo del footer-->
+    <footer>
+
+        <section class="ubicacion">
+            <p>Nos encontramos en:</p>
+
+            <iframe class="iframe-map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d821.4349166206297!2d-58.47201727080951!3d-34.56014629433775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb686f64623a9%3A0x257f2cde788f4d3a!2sAv.%20Congreso%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1662623882361!5m2!1ses-419!2sar"
+                style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+
+            </iframe>
+
+
+        </section>
+
+        <section class="redes">
+
+            <p>Seguinos en nuestras redes:</p>
+
+
+            <ul>
+                <li class="py-2"><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li></a>
+                <li class="py-2"><a href="" class="links"><i class="bi-instagram"></i></li></a>
+                <li class="py-2"><a href="" class="links"><i class="bi-github"></i></li></a>
+
+            </ul>
+
+
+        </section>
+
+        <section class="derechos">
+
+            <p>@GamingHouse,2022.Todos los derechos reservados.</p>
+
+        </section>
+
+
+    </footer>
+
+    <!-- Fin del footer-->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
