--- a/armatupc.html
+++ b/armatupc.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,10 +14,11 @@
 
     <title>Armá tu pc</title>
 </head>
-<body>
-     <!-- Comienzo del header -->
 
-     <header class="header-index pb-1">
+<body>
+    <!-- Comienzo del header -->
+
+    <header class="header-index pb-1">
 
         <div>
 
@@ -54,6 +56,30 @@
 
     <!-- Fin del header -->
 
+    <main class="container">
+
+        <p class="text-center py-3">Armá tu pc</p>
+
+        <section class="d-flex flex-column text-center flex-md-row justify-content-center pb-md-5">
+
+            <div><img class="w-75 pb-3 links" src="./assets/intel.png" alt="logo de intel"></div>
+
+            <div><img class="w-75 pb-3 links" src="./assets/amd.png" alt="logo de amd"></div>
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+    </main>
+
     <!-- Comienzo del footer-->
     <footer>
 
@@ -75,7 +101,8 @@
 
 
             <ul>
-                <li class="py-2"><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li></a>
+                <li class="py-2"><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li>
+                </a>
                 <li class="py-2"><a href="" class="links"><i class="bi-instagram"></i></li></a>
                 <li class="py-2"><a href="" class="links"><i class="bi-github"></i></li></a>
 
@@ -94,8 +121,9 @@
     </footer>
 
     <!-- Fin del footer-->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
