se agrego sponsor

--- a/nuestraempresa.html
+++ b/nuestraempresa.html
@@ -95,9 +95,9 @@
 
 
             <ul>
-                <li class="py-2"><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li></a>
-                <li class="py-2"><a href="" class="links"><i class="bi-instagram"></i></li></a>
-                <li class="py-2"><a href="" class="links"><i class="bi-github"></i></li></a>
+                <li ><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li></a>
+                <li ><a href="https://www.instagram.com/" class="links"><i class="bi-instagram"></i></li></a>
+                <li ><a href="https://github.com/Tolomatico/2dapreentrega-ballesty" class="links"><i class="bi-github"></i></li></a>
 
             </ul>
 
