--- a/index.html
+++ b/index.html
@@ -63,63 +63,87 @@
 
     <!-- Comienzo del main-->
 
-    <main class="container shadow-lg p-3 mb-5 bg-body rounded align-center">
+    <main>
+        <section class="container shadow-lg p-3 mb-5 bg-body rounded align-center">
 
 
 
-        <div>
-            <h2 class="text-center">Ofertas</h2>
-        </div>
-
-        <div class="row col-12">
-
-            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-
-
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="./assets/rtx3060ti.png" class="d-block w-50 rounded mx-auto" alt="...">
-                         <div class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
-                            <article>rtx3060ti</article>
-                            <p>aaaaaaaaaaaaaaaaaaa</p>
-                         </div>
-                </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <img src="./assets/rtx3060ti.png" class="d-block w-50 rounded mx-auto" alt="...">
-                        <div class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
-                            <h5>rtx3060ti</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/rtx3060ti.png" class="d-block  w-50 rounded mx-auto" alt="...">
-                        <div class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
-                            <h5>rtx3060ti</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+            <div>
+                <h2 class="text-center">Ofertas</h2>
             </div>
 
-        </div>
+            <div class="row col-12">
+
+                <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+
+
+                        <div class="carousel-item active" data-bs-interval="10000">
+                            <img src="./assets/radeon_rx_6800_phantom_gaming_d_16g_oc_l1_.png"
+                                class="d-block w-50 rounded mx-auto" alt="...">
+                            <div
+                                class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
+                                <article>AMD Radeon RX 6800 XT Phantom Gaming D 16G OC</article>
+                                <p>aaaaaaaaaaaaaaaaaaa</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="2000">
+                            <img src="./assets/rtx3060ti.jpg" class="d-block w-50 rounded mx-auto" alt="...">
+                            <div
+                                class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
+                                <h5>EVGA GeForce RTX 3060 Ti XC</h5>
+                                <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/rtx3060.png" class="d-block  w-50 rounded mx-auto" alt="...">
+                            <div
+                                class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
+                                <h5>GeForce RTX 3060 GAMING OC 12G</h5>
+                                <p>Some representative placeholder content for the third slide.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+
+            </div>
+
+
+        </section>
+
+
+        
+        <section class="sponsor mb-3">
+            <div class="square slider d-flex flex-row align-content-center justify-content-between">
+                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
+                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
+                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
+                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
+                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
+                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
+                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
+            </div>
+
+        </section>
+        
 
     </main>
 
@@ -146,9 +170,10 @@
 
 
             <ul>
-                <li class="py-2"><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li></a>
-                <li class="py-2"><a href="" class="links"><i class="bi-instagram"></i></li></a>
-                <li class="py-2"><a href="" class="links"><i class="bi-github"></i></li></a>
+                <li><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li></a>
+                <li><a href="https://www.instagram.com/" class="links"><i class="bi-instagram"></i></li></a>
+                <li><a href="https://github.com/Tolomatico/2dapreentrega-ballesty" class="links"><i
+                            class="bi-github"></i></li></a>
 
             </ul>
 
