--- a/armatupc.html
+++ b/armatupc.html
@@ -58,7 +58,7 @@
 
     <main class="container">
 
-        <p class="text-center py-3">Armá tu pc</p>
+        <h2 class="text-center py-3">Armá tu pc</h2>
 
         <section class="d-flex flex-column text-center flex-md-row justify-content-center pb-md-5">
 
