--- a/index.html
+++ b/index.html
@@ -88,27 +88,33 @@
 
                         <div class="carousel-item active" data-bs-interval="10000">
                             <img src="./assets/radeon_rx_6800_phantom_gaming_d_16g_oc_l1_.png"
-                                class="d-block w-50 rounded mx-auto" alt="...">
+                                class="d-block w-50 rounded mx-auto" alt="imagen placa de video rx 6800xt">
                             <div
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
                                 <article>AMD Radeon RX 6800 XT Phantom Gaming D 16G OC</article>
-                                <p>aaaaaaaaaaaaaaaaaaa</p>
+                                <p>Precio: 150000</p>
+                                <p> <a class="comprar" href="">Agregar al carrito</a> </p>
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="./assets/rtx3060ti.jpg" class="d-block w-50 rounded mx-auto" alt="...">
+                            <img src="./assets/rtx3060ti.jpg" class="d-block w-50 rounded mx-auto"
+                                alt="imagen placa de video rtx 3060ti">
                             <div
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
-                                <h5>EVGA GeForce RTX 3060 Ti XC</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
+                                <article>EVGA GeForce RTX 3060 Ti XC</article>
+                                <p>Precio: 130000</p>
+                                <p> <a class="comprar" href="">Agregar al carrito</a> </p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/rtx3060.png" class="d-block  w-50 rounded mx-auto" alt="...">
+                            <img src="./assets/rtx3060.png" class="d-block  w-50 rounded mx-auto"
+                                alt="imagen placa de video rtx 3060">
                             <div
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
-                                <h5>GeForce RTX 3060 GAMING OC 12G</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
+                                <article>GeForce RTX 3060 GAMING OC 12G</article>
+                                <p>Precio: 110000</p>
+                                <p> <a class="comprar" href="">Agregar al carrito</a> </p>
+
                             </div>
                         </div>
                     </div>
@@ -130,20 +136,20 @@
         </section>
 
 
-        
+
         <section class="sponsor mb-3">
             <div class="square slider d-flex flex-row align-content-center justify-content-between">
-                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
-                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
-                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
-                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
-                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
-                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
-                <img class="h-100" src="./assets/redragon.png" alt="logo de redragon">
+              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a> 
+              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+
             </div>
 
         </section>
-        
+
 
     </main>
 
@@ -172,8 +178,7 @@
             <ul>
                 <li><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li></a>
                 <li><a href="https://www.instagram.com/" class="links"><i class="bi-instagram"></i></li></a>
-                <li><a href="https://github.com/Tolomatico/2dapreentrega-ballesty" class="links"><i
-                            class="bi-github"></i></li></a>
+                <li><a href="https://github.com/Tolomatico/2dapreentrega-ballesty" class="links"><i class="bi-github"></i></li></a>
 
             </ul>
 
