--- a/armatupc.html
+++ b/armatupc.html
@@ -15,7 +15,7 @@
     <title>Armá tu pc</title>
 </head>
 
-<body>
+<body class="body">
     <!-- Comienzo del header -->
 
     <header class="header-index pb-1">
@@ -56,15 +56,41 @@
 
     <!-- Fin del header -->
 
-    <main class="container">
+    <main>
 
-        <h2 class="text-center py-3">Armá tu pc</h2>
+        <section class="container  shadow-lg my-3">
 
-        <section class="d-flex flex-column text-center flex-md-row justify-content-center pb-md-5">
 
-            <div><img class="w-75 pb-3 links" src="./assets/intel.png" alt="logo de intel"></div>
 
-            <div><img class="w-75 pb-3 links" src="./assets/amd.png" alt="logo de amd"></div>
+            <h2 class="text-center py-3">Armá tu pc</h2>
+
+            <section class="d-flex flex-column text-center flex-md-row justify-content-center pb-md-5">
+
+                <div><img class="w-75 pb-3 links" src="./assets/intel.png" alt="logo de intel"></div>
+
+                <div><img class="w-75 pb-3 links" src="./assets/amd.png" alt="logo de amd"></div>
+
+            </section>
+
+        </section>
+
+
+        <section class="sponsor mb-3 d-none d-md-block">
+            <div class=" d-none square slider d-md-flex justify-content-between align-content-center">
+                <div class="my-1"> <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                            alt="logo de redragon"></a> </div>
+                <div class="my-1"> <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                            alt="logo de redragon"></a> </div>
+                <div class="my-1"> <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                            alt="logo de redragon"></a></div>
+                <div class="my-1"> <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                            alt="logo de redragon"></a></div>
+                <div class="my-1"> <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                            alt="logo de redragon"></a></div>
+                <div class="my-1"> <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                            alt="logo de redragon"></a></div>
+
+            </div>
 
         </section>
 
