--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Comienzo del main-->
 
     <main>
-        <section class="container shadow-lg p-3 mb-5 bg-body rounded align-center">
+        <section class="container shadow-lg p-3 mb-3 bg-body rounded align-center mt-3">
 
 
 
@@ -137,8 +137,8 @@
 
 
 
-        <section class="sponsor mb-3">
-            <div class="square slider d-flex flex-row align-content-center justify-content-between">
+        <section class="sponsor mb-3 d-none d-md-block">
+            <div class=" d-none square slider d-md-flex flex-row align-content-center justify-content-between">
               <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a> 
               <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
               <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
