--- a/nuestraempresa.html
+++ b/nuestraempresa.html
@@ -57,16 +57,33 @@
 
      <!-- Inicio contenido -->
 
-     <Main class="main-nuestraempresa container">
+     <Main>
 
-
-        <section>
+<section  class="nosotros container shadow-lg my-3">
+        <div>
 
             <h5 class="fs-1 py-3">Quienes somos?</h5>
 
             <p class="py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. A atque voluptas officiis dolores, dolore fuga quia magni est aut dolorem maxime officia at aperiam quos nam quaerat iusto neque dolor.</p>
     
-      </section>
+      </div>
+
+      
+
+    </section>
+
+    <section class="sponsor mb-3 d-none d-md-block">
+        <div class=" d-none square slider d-md-flex flex-row align-content-center justify-content-between">
+          <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a> 
+          <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+          <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+          <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+          <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+          <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+
+        </div>
+
+    </section>
 
 
 
@@ -95,9 +112,9 @@
 
 
             <ul>
-                <li ><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li></a>
-                <li ><a href="https://www.instagram.com/" class="links"><i class="bi-instagram"></i></li></a>
-                <li ><a href="https://github.com/Tolomatico/2dapreentrega-ballesty" class="links"><i class="bi-github"></i></li></a>
+                <li><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li></a>
+                <li><a href="https://www.instagram.com/" class="links"><i class="bi-instagram"></i></li></a>
+                <li><a href="https://github.com/Tolomatico/2dapreentrega-ballesty" class="links"><i class="bi-github"></i></li></a>
 
             </ul>
 
