--- a/contacto.html
+++ b/contacto.html
@@ -60,9 +60,9 @@
 
     <!-- Inicio Formulario -->
 
-    <main class="main-contacto container py-5 ">
+    <main>
 
-        <form action="" class="d-flex flex-column align-items-center">
+        <form action="" class="container mt-3 mb-3 d-flex flex-column align-items-center shadow-lg pb-5">
 
 
             <label class="mb-2" for="nombre-usuario">Nombre y apellido:</label>
@@ -86,17 +86,33 @@
             <label class="mb-2 w-50 text-center" for="notificaciones">Desea recibir notificaciones por mail?</label>
             <input class="mb-2 w-50" type="checkbox" id="notificaciones" value="si-recibir-notificaciones">
 
-            <div>
+            
+            <div class="text-center d-flex">
+                    <div>
+                        <input class="enviar" type="submit" value="enviar">
+                    </div>
 
-
-
-                <div class="text-center">
-                    <input class="enviar" type="submit" value="enviar">
-                    <input class="borrar" type="reset" value="borrar">
-                </div>
+                    <div> 
+                        <input class="borrar" type="reset" value="borrar">
+                    </div>
+            </div>
 
 
         </form>
+
+
+        <section class="sponsor mb-3 d-none d-md-block">
+            <div class=" d-none square slider d-md-flex flex-row align-content-center justify-content-between">
+              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a> 
+              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+
+            </div>
+
+        </section>
 
 
 
@@ -130,18 +146,13 @@
 
             <p>Seguinos en nuestras redes:</p>
 
-            <div>
-                <ul>
-                    <li><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i>
-                    </li></a>
-                    <li"><a href="https://www.instagram.com/" class="links"><i class="bi-instagram"></i>
-                    </li></a>
-                    <li><a href="https://github.com/Tolomatico/2dapreentrega-ballesty" class="links"><i
-                                class="bi-github"></i></li></a>
 
-                </ul>
+            <ul>
+                <li><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li></a>
+                <li><a href="https://www.instagram.com/" class="links"><i class="bi-instagram"></i></li></a>
+                <li><a href="https://github.com/Tolomatico/2dapreentrega-ballesty" class="links"><i class="bi-github"></i></li></a>
 
-            </div>
+            </ul>
 
 
         </section>
