se agrego menu burger

--- a/index.html
+++ b/index.html
@@ -23,37 +23,34 @@
 
     <!-- Comienzo del header -->
 
-    <header class="header-index pb-1">
+    <header class=" header-index ">
 
-        <div>
+       
 
-
-            <a href="./index.html" class="links">
-                <h1 class="header__tittle links">GamingHouse</h1>
-            </a>
-
-        </div>
-
-        <nav class="header-nav">
-
-
-            <ul>
-                <a href="./categorias.html" class="links">
-                    <li>Categorías</li>
-                </a>
-                <a href="./armatupc.html" class="links">
-                    <li>Armá tu pc</li>
-                </a>
-                <a href="./nuestraempresa.html" class="links">
-                    <li>Nuestra empresa</li>
-                </a>
-                <a href="./contacto.html" class="links">
-                    <li>Contacto</li>
-                </a>
-            </ul>
-
-
-
+        <nav class="container navbar navbar-expand-lg header-nav">
+            <div class="container-fluid d-flex justify-content-evenly ">
+                <a class="navbar-brand" href="#"><h1 class="links">GamingHouse</h1></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-lg-flex justify-content-lg-evenly navegador"  id="navbarNav">
+                    <ul class="navbar-nav text-center navegador">
+                        <li class="nav-item">
+                            <a class=" active links" aria-current="page" href="#">Categorías</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class=" links" href="#">Armá tu pc</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class=" links" href="#">Quienes somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="links" href="#">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
 
 
@@ -139,12 +136,18 @@
 
         <section class="sponsor mb-3 d-none d-md-block">
             <div class=" d-none square slider d-md-flex flex-row align-content-center justify-content-between">
-              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a> 
-              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
-              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
-              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
-              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
-              <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                        alt="logo de redragon"></a>
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                        alt="logo de redragon"></a>
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                        alt="logo de redragon"></a>
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                        alt="logo de redragon"></a>
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                        alt="logo de redragon"></a>
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                        alt="logo de redragon"></a>
 
             </div>
 
@@ -178,7 +181,8 @@
             <ul>
                 <li><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li></a>
                 <li><a href="https://www.instagram.com/" class="links"><i class="bi-instagram"></i></li></a>
-                <li><a href="https://github.com/Tolomatico/2dapreentrega-ballesty" class="links"><i class="bi-github"></i></li></a>
+                <li><a href="https://github.com/Tolomatico/2dapreentrega-ballesty" class="links"><i
+                            class="bi-github"></i></li></a>
 
             </ul>
 
