--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <nav class="container navbar navbar-expand-lg header-nav">
             <div class="container-fluid d-flex justify-content-evenly ">
-                <a class="navbar-brand" href="#"><h1 class="links">GamingHouse</h1></a>
+                <a class="navbar-brand" href="./index.html"><h1 class="links">GamingHouse</h1></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -37,16 +37,16 @@
                 <div class="collapse navbar-collapse d-lg-flex justify-content-lg-evenly navegador"  id="navbarNav">
                     <ul class="navbar-nav text-center navegador">
                         <li class="nav-item">
-                            <a class=" active links" aria-current="page" href="#">Categorías</a>
+                            <a class=" links" aria-current="page" href="./categorias.html">Categorías</a>
                         </li>
                         <li class="nav-item">
-                            <a class=" links" href="#">Armá tu pc</a>
+                            <a class=" links" href="./armatupc.html">Armá tu pc</a>
                         </li>
                         <li class="nav-item">
-                            <a class=" links" href="#">Quienes somos</a>
+                            <a class=" links" href="./nuestraempresa.html">Quienes somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="links" href="#">Contacto</a>
+                            <a class="links" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -161,6 +161,8 @@
     <!-- Comienzo del footer-->
     <footer>
 
+        
+
         <section class="ubicacion">
             <p>Nos encontramos en:</p>
 
@@ -194,6 +196,8 @@
             <p>@GamingHouse,2022.Todos los derechos reservados.</p>
 
         </section>
+
+   
 
 
     </footer>
