--- a/nuestraempresa.html
+++ b/nuestraempresa.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,39 +16,38 @@
 </head>
 
 <body>
-     <!-- Comienzo del header -->
+    <!-- Comienzo del header -->
 
-     <header class="header-index pb-1">
-
-        <div>
+    <header class=" header-index ">
 
 
-            <a href="./index.html" class="links">
-                <h1 class="header__tittle links">GamingHouse</h1>
-            </a>
 
-        </div>
-
-        <nav class="header-nav">
-
-
-            <ul>
-                <a href="./categorias.html" class="links">
-                    <li>Categorías</li>
+        <nav class="container navbar navbar-expand-lg header-nav">
+            <div class="container-fluid d-flex justify-content-evenly ">
+                <a class="navbar-brand" href="./index.html">
+                    <h1 class="links">GamingHouse</h1>
                 </a>
-                <a href="./armatupc.html" class="links">
-                    <li>Armá tu pc</li>
-                </a>
-                <a href="./nuestraempresa.html" class="links">
-                    <li>Nuestra empresa</li>
-                </a>
-                <a href="./contacto.html" class="links">
-                    <li>Contacto</li>
-                </a>
-            </ul>
-
-
-
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-lg-flex justify-content-lg-evenly navegador" id="navbarNav">
+                    <ul class="navbar-nav text-center navegador">
+                        <li class="nav-item">
+                            <a class=" links" aria-current="page" href="./categorias.html">Categorías</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class=" links" href="./armatupc.html">Armá tu pc</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class=" links" href="./nuestraempresa.html">Quienes somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="links" href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
 
 
@@ -55,35 +55,44 @@
 
     <!-- Fin del header -->
 
-     <!-- Inicio contenido -->
+    <!-- Inicio contenido -->
 
-     <Main>
+    <Main>
 
-<section  class="nosotros container shadow-lg my-3">
-        <div>
+        <section class="nosotros container shadow-lg my-3">
+            <div>
 
-            <h5 class="fs-1 py-3">Quienes somos?</h5>
+                <h5 class="fs-1 py-3">Quienes somos?</h5>
 
-            <p class="py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. A atque voluptas officiis dolores, dolore fuga quia magni est aut dolorem maxime officia at aperiam quos nam quaerat iusto neque dolor.</p>
-    
-      </div>
+                <p class="py-3">Somos Gaminghouse,un emprendimiento dedicado a la venta de artículos de computadora.
+                    <br> Tenemos como objetivo brindar la mejor atención y los mejores precios del mercado y para ello buscamos la satisfacción en el servicio que brindamos para 
+                     ganarnos las confianza de nuestros clientes.
+                </p>
 
-      
+            </div>
 
-    </section>
 
-    <section class="sponsor mb-3 d-none d-md-block">
-        <div class=" d-none square slider d-md-flex flex-row align-content-center justify-content-between">
-          <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a> 
-          <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
-          <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
-          <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
-          <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
-          <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png" alt="logo de redragon"></a>
 
-        </div>
+        </section>
 
-    </section>
+        <section class="sponsor mb-3 d-none d-md-block">
+            <div class=" d-none square slider d-md-flex flex-row align-content-center justify-content-between">
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                        alt="logo de redragon"></a>
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                        alt="logo de redragon"></a>
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                        alt="logo de redragon"></a>
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                        alt="logo de redragon"></a>
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                        alt="logo de redragon"></a>
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                        alt="logo de redragon"></a>
+
+            </div>
+
+        </section>
 
 
 
@@ -114,7 +123,8 @@
             <ul>
                 <li><a href="https://es-la.facebook.com/" class="links"><i class="bi-facebook"></i></li></a>
                 <li><a href="https://www.instagram.com/" class="links"><i class="bi-instagram"></i></li></a>
-                <li><a href="https://github.com/Tolomatico/2dapreentrega-ballesty" class="links"><i class="bi-github"></i></li></a>
+                <li><a href="https://github.com/Tolomatico/2dapreentrega-ballesty" class="links"><i
+                            class="bi-github"></i></li></a>
 
             </ul>
 
@@ -131,8 +141,9 @@
     </footer>
 
     <!-- Fin del footer-->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
