--- a/nuestraempresa.html
+++ b/nuestraempresa.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
-    <title>Nuestra empresa</title>
+    <title>GamingHouse | Nuestra empresa</title>
 </head>
 
 <body>
@@ -34,10 +34,10 @@
                 <div class="collapse navbar-collapse d-lg-flex justify-content-lg-evenly navegador" id="navbarNav">
                     <ul class="navbar-nav text-center navegador">
                         <li class="nav-item">
-                            <a class=" links" aria-current="page" href="./categorias.html">Categorías</a>
+                            <a class=" links" aria-current="page" href="./Monitores.html">Monitores</a>
                         </li>
                         <li class="nav-item">
-                            <a class=" links" href="./armatupc.html">Armá tu pc</a>
+                            <a class=" links" href="./televisores.html">Televisores</a>
                         </li>
                         <li class="nav-item">
                             <a class=" links" href="./nuestraempresa.html">Quienes somos</a>
@@ -64,7 +64,7 @@
 
                 <h5 class="fs-1 py-3">Quienes somos?</h5>
 
-                <p class="py-3">Somos Gaminghouse,un emprendimiento dedicado a la venta de artículos de computadora.
+                <p class="py-3">Somos Gaminghouse,un emprendimiento dedicado a la venta de TVs smarts y monitores gaming.
                     <br> Tenemos como objetivo brindar la mejor atención y los mejores precios del mercado y para ello buscamos la satisfacción en el servicio que brindamos para 
                      ganarnos las confianza de nuestros clientes.
                 </p>
