--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <meta name="description" content="Gaminghouse, ofertas en televisores y monitores gaming">
+    
 
 
 
-    <title>GamingHouse</title>
+    <title>GamingHouse | Televisores y Monitores gaming al mejor precio</title>
 
 </head>
 
@@ -37,13 +39,13 @@
                 <div class="collapse navbar-collapse d-lg-flex justify-content-lg-evenly navegador"  id="navbarNav">
                     <ul class="navbar-nav text-center navegador">
                         <li class="nav-item">
-                            <a class=" links" aria-current="page" href="./categorias.html">Categorías</a>
+                            <a class="links" aria-current="page" href="./Monitores.html">Monitores</a>
                         </li>
                         <li class="nav-item">
-                            <a class=" links" href="./armatupc.html">Armá tu pc</a>
+                            <a class="links" href="./televisores.html">Televisores</a>
                         </li>
                         <li class="nav-item">
-                            <a class=" links" href="./nuestraempresa.html">Quienes somos</a>
+                            <a class="links" href="./nuestraempresa.html">Quienes somos</a>
                         </li>
                         <li class="nav-item">
                             <a class="links" href="./contacto.html">Contacto</a>
@@ -72,7 +74,7 @@
             <div class="row col-12">
 
                 <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
+                    <div class="carousel-indicators d-none d-md-block text-center">
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
                             aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
@@ -84,33 +86,33 @@
 
 
                         <div class="carousel-item active" data-bs-interval="10000">
-                            <img src="./assets/radeon_rx_6800_phantom_gaming_d_16g_oc_l1_.png"
+                            <img src="./assets/tv50.jpg"
                                 class="d-block w-50 rounded mx-auto" alt="imagen placa de video rx 6800xt">
                             <div
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
-                                <article>AMD Radeon RX 6800 XT Phantom Gaming D 16G OC</article>
-                                <p>Precio: 150000</p>
-                                <p> <a class="comprar" href="">Agregar al carrito</a> </p>
+                                <article>50" Neo QLED 4K QN90B TV Gaming</article>
+                                <p>Precio: 299.999</p>
+                                <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="./assets/rtx3060ti.jpg" class="d-block w-50 rounded mx-auto"
+                            <img src="./assets/tv50.jpg" class="d-block w-50 rounded mx-auto"
                                 alt="imagen placa de video rtx 3060ti">
                             <div
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
-                                <article>EVGA GeForce RTX 3060 Ti XC</article>
-                                <p>Precio: 130000</p>
-                                <p> <a class="comprar" href="">Agregar al carrito</a> </p>
+                                <article>50" Neo QLED 4K QN90B TV Gaming</article>
+                                <p>Precio: 299.999</p>
+                                <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/rtx3060.png" class="d-block  w-50 rounded mx-auto"
+                            <img src="./assets/tv50.jpg" class="d-block  w-50 rounded mx-auto"
                                 alt="imagen placa de video rtx 3060">
                             <div
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
-                                <article>GeForce RTX 3060 GAMING OC 12G</article>
-                                <p>Precio: 110000</p>
-                                <p> <a class="comprar" href="">Agregar al carrito</a> </p>
+                                <article>50" Neo QLED 4K QN90B TV Gaming</article>
+                                <p>Precio: 299.999</p>
+                                <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
                             </div>
                         </div>
