--- a/monitores.html
+++ b/monitores.html
@@ -68,9 +68,9 @@
             <section class="section__tarjeta">
 
                 <div class="tarjeta">
-                    <img class="monitor" src="" alt="">
+                    <img class="monitor"  alt="">
                     <article>Monitor Gaming 24" FHD 144Hz Curvo</article>
-                    <p>Precio: 299.999</p>
+                    <p>Precio: 70.000</p>
                     <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
 
