se agrego parcial

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
                         <div class="carousel-item active" data-bs-interval="10000">
-                            <img src="./assets/tv50.jpg"
+                            <img src="./assets/tv1.jpg"
                                 class="d-block w-50 rounded mx-auto" alt="imagen placa de video rx 6800xt">
                             <div
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="./assets/tv50.jpg" class="d-block w-50 rounded mx-auto"
+                            <img src="./assets/monitorodyssey.png" class="d-block w-50 rounded mx-auto"
                                 alt="imagen placa de video rtx 3060ti">
                             <div
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
@@ -106,7 +106,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/tv50.jpg" class="d-block  w-50 rounded mx-auto"
+                            <img src="./assets/tv6.jpg" class="d-block  w-50 rounded mx-auto"
                                 alt="imagen placa de video rtx 3060">
                             <div
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
