--- a/televisores.html
+++ b/televisores.html
@@ -62,7 +62,7 @@
             <section class="section__tarjeta">
 
             <div class="tarjeta">
-                <img class="imagen w-50" src="./assets/tv50.jpg" alt="">
+                <img class="televisor1" alt="">
                 <article>50" Neo QLED 4K QN90B TV Gaming</article>
                 <p>Precio: 299.999</p>
                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
@@ -72,7 +72,7 @@
             </div>
 
             <div class="tarjeta">
-                <img class="tarjeta__imagen w-50" src="./assets/tv50.jpg" alt="">
+                <img class="televisor1" alt="">
                 <article>50" Neo QLED 4K QN90B TV Gaming</article>
                 <p>Precio: 299.999</p>
                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
@@ -81,7 +81,7 @@
 
             </div>
             <div class="tarjeta">
-                <img class="tarjeta__imagen w-50" src="./assets/tv50.jpg" alt="">
+                <img class="televisor1" alt="">
                 <article>50" Neo QLED 4K QN90B TV Gaming</article>
                 <p>Precio: 299.999</p>
                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
@@ -90,7 +90,7 @@
 
             </div>
             <div class="tarjeta">
-                <img class="tarjeta__imagen w-50" src="./assets/tv50.jpg" alt="">
+                <img class="televisor1" alt="">
                 <article>50" Neo QLED 4K QN90B TV Gaming</article>
                 <p>Precio: 299.999</p>
                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
@@ -99,7 +99,7 @@
 
             </div>
             <div class="tarjeta">
-                <img class="tarjeta__imagen w-50" src="./assets/tv50.jpg" alt="">
+                <img class="televisor1" alt="">
                 <article>50" Neo QLED 4K QN90B TV Gaming</article>
                 <p>Precio: 299.999</p>
                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
@@ -108,7 +108,7 @@
 
             </div>
             <div class="tarjeta">
-                <img class="tarjeta__imagen w-50" src="./assets/tv50.jpg" alt="">
+                <img class="televisor1" alt="">
                 <article>50" Neo QLED 4K QN90B TV Gaming</article>
                 <p>Precio: 299.999</p>
                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
@@ -117,7 +117,7 @@
 
             </div>
             <div class="tarjeta">
-                <img class="tarjeta__imagen w-50" src="./assets/tv50.jpg" alt="">
+                <img class="televisor1" alt="">
                 <article>50" Neo QLED 4K QN90B TV Gaming</article>
                 <p>Precio: 299.999</p>
                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
@@ -125,15 +125,8 @@
 
 
             </div>
-            <div class="tarjeta">
-                <img class="tarjeta__imagen w-50" src="./assets/tv50.jpg" alt="">
-                <article>50" Neo QLED 4K QN90B TV Gaming</article>
-                <p>Precio: 299.999</p>
-                <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
-
-
-
-            </div>
+           
+            
 
         </section>
     </section>
