--- a/nuestraempresa.html
+++ b/nuestraempresa.html
@@ -62,7 +62,7 @@
         <section class="nosotros container shadow-lg my-3">
             <div>
 
-                <h5 class="fs-1 py-3">Quienes somos?</h5>
+                <h5 class="fs-1 py-3">¿Quienes somos?</h5>
 
                 <p class="py-3">Somos Gaminghouse,un emprendimiento dedicado a la venta de TVs smarts y monitores gaming.
                     <br> Tenemos como objetivo brindar la mejor atención y los mejores precios del mercado y para ello buscamos la satisfacción en el servicio que brindamos para 
@@ -79,17 +79,14 @@
             <div class=" d-none square slider d-md-flex flex-row align-content-center justify-content-between">
                 <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
                         alt="logo de redragon"></a>
-                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/samsung.jpg"
                         alt="logo de redragon"></a>
-                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/lg.png"
                         alt="logo de redragon"></a>
-                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/bgh.png"
                         alt="logo de redragon"></a>
-                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
-                        alt="logo de redragon"></a>
-                <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
-                        alt="logo de redragon"></a>
-
+               
+                
             </div>
 
         </section>
