--- a/televisores.html
+++ b/televisores.html
@@ -132,24 +132,21 @@
     </section>
 
 
-        <section class="sponsor mb-3 d-none d-md-block">
-            <div class=" d-none square slider d-md-flex justify-content-between align-content-center">
-                <div class="my-1"> <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
-                            alt="logo de redragon"></a> </div>
-                <div class="my-1"> <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
-                            alt="logo de redragon"></a> </div>
-                <div class="my-1"> <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
-                            alt="logo de redragon"></a></div>
-                <div class="my-1"> <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
-                            alt="logo de redragon"></a></div>
-                <div class="my-1"> <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
-                            alt="logo de redragon"></a></div>
-                <div class="my-1"> <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
-                            alt="logo de redragon"></a></div>
+    <section class="sponsor mb-3 d-none d-md-block">
+        <div class=" d-none square slider d-md-flex flex-row align-content-center justify-content-between">
+            <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+                    alt="logo de redragon"></a>
+            <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/samsung.jpg"
+                    alt="logo de redragon"></a>
+            <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/lg.png"
+                    alt="logo de redragon"></a>
+            <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/bgh.png"
+                    alt="logo de redragon"></a>
+           
+            
+        </div>
 
-            </div>
-
-        </section>
+    </section>
 
 
 
